chore: initial project implementation (Device API v1)